--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="app" class="p-4 sm:p-6 lg:p-8 max-w-7xl mx-auto">
 
         <header class="mb-8 text-center">
-            <h1 class="text-4xl font-bold text-slate-900">Customer Retention & Analysis Dashboard</h1>
+            <h1 class="text-4xl font-bold text-slate-900 main-title">Customer Retention & Analysis Dashboard</h1>
             <p class="text-slate-500 mt-2 max-w-2xl mx-auto">Upload two transaction summaries to compare periods or use the API fetch for cohort and churn analysis.</p>
         </header>
 
@@ -90,7 +90,7 @@
 
                     <div id="churn-inputs" class="hidden">
                         <div>
-                             <h4 class="text-sm font-medium text-slate-700 mb-2">Observation Date Range (Churn is calculated based on inactivity in the 30 days prior)</h4>
+                             <h4 class="text-sm font-medium text-slate-700 mb-2">This compares with activity in the 30 days prior</h4>
                              <div class="flex items-center gap-2 mb-3" id="api-presets-churn"></div>
                              <div class="flex items-center gap-2">
                                 <input type="date" id="api-start-churn" class="w-full border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-sm p-2">
@@ -116,12 +116,12 @@
         </div>
 
         <div id="dashboard" class="hidden">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-4 sm:gap-6 mb-8">
-                <div class="metric-card bg-white p-5 rounded-xl shadow-sm"><h3 class="text-sm font-medium text-slate-500">Retention Rate</h3><p id="retention-rate" class="text-3xl font-bold mt-1"></p></div>
-                <div class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">Retained Users</h3><p id="retained-users" class="text-3xl font-bold mt-1"></p><p id="retained-when" class="text-xs text-slate-400 mt-1"></p><div id="retained-popup" class="card-popup"></div></div>
-                <div class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">New Users</h3><p id="new-users" class="text-3xl font-bold mt-1"></p><p id="new-when" class="text-xs text-slate-400 mt-1"></p><div id="new-popup" class="card-popup"></div></div>
-                <div id="churned-users-card" class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">Churned Users</h3><p id="churned-users" class="text-3xl font-bold mt-1"></p><p id="churned-when" class="text-xs text-slate-400 mt-1"></p><div id="churned-popup" class="card-popup"></div></div>
-                <div class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">Total Active Users</h3><p id="total-users" class="text-3xl font-bold mt-1"></p><p id="total-when" class="text-xs text-slate-400 mt-1"></p><div id="total-popup" class="card-popup"></div></div>
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 sm:gap-6 mb-8">
+                <div class="metric-card bg-white p-5 rounded-xl shadow-sm"><h3 class="text-sm font-medium text-slate-500">Retention Rate</h3><p id="retention-rate" class="metric-value text-3xl font-bold mt-1"></p></div>
+                <div class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">Retained Users</h3><p id="retained-users" class="metric-value text-3xl font-bold mt-1"></p><p id="retained-when" class="text-xs text-slate-400 mt-1"></p><div id="retained-popup" class="card-popup"></div></div>
+                <div class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">New Users</h3><p id="new-users" class="metric-value text-3xl font-bold mt-1"></p><p id="new-when" class="text-xs text-slate-400 mt-1"></p><div id="new-popup" class="card-popup"></div></div>
+                <div id="churned-users-card" class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">Churned Users</h3><p id="churned-users" class="metric-value text-3xl font-bold mt-1"></p><p id="churned-when" class="text-xs text-slate-400 mt-1"></p><div id="churned-popup" class="card-popup"></div></div>
+                <div class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">Total Active Users</h3><p id="total-users" class="metric-value text-3xl font-bold mt-1"></p><p id="total-when" class="text-xs text-slate-400 mt-1"></p><div id="total-popup" class="card-popup"></div></div>
             </div>
 
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-8">
@@ -141,7 +141,11 @@
                         <h3 id="table-title" class="text-xl font-semibold">User Data</h3>
                         <p id="table-description" class="text-sm text-slate-500 mt-1">Select a period to see user data.</p>
                     </div>
-                    <div class="flex items-center gap-4 w-full sm:w-auto">
+                    <div class="flex flex-col sm:flex-row items-end gap-4 w-full sm:w-auto">
+                        <div class="w-full sm:w-48">
+                            <label for="search-input" class="block text-sm font-medium text-slate-700">Search Users</label>
+                            <input type="text" id="search-input" placeholder="Name, phone..." class="mt-1 block w-full border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-sm p-2">
+                        </div>
                         <div class="w-full sm:w-64">
                             <label for="transaction-filter" class="block text-sm font-medium text-slate-700">Filter by Transaction Count</label>
                             <div class="flex items-center gap-2 mt-1">
@@ -150,34 +154,33 @@
                                 <input type="number" id="max-trans" placeholder="Max" class="w-full border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-sm p-2">
                             </div>
                         </div>
-                        <button id="export-csv" class="self-end bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition h-fit">Export CSV</button>
+                        <button id="export-csv" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition h-fit">Export CSV</button>
                     </div>
                 </div>
-                <div id="table-scroll-container" class="overflow-x-auto relative">
-                    <table class="min-w-full divide-y divide-slate-200">
-                        <thead class="bg-slate-50">
-                            <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">First Name</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Last Name</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Phone Number</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">LGA</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Store Name</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Store Address</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Transaction Count</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Total Amount</th>
-                            </tr>
-                        </thead>
-                        <tbody id="data-table" class="bg-white divide-y divide-slate-200">
-                            </tbody>
-                    </table>
-                     <p id="no-results" class="text-center py-8 text-slate-500 hidden">No users match the current filter.</p>
+                <div class="relative">
+                    <div id="table-scroll-container" class="overflow-x-auto">
+                        <table class="min-w-full divide-y divide-slate-200">
+                            <thead class="bg-slate-50">
+                                <tr>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">First Name</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Last Name</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Phone Number</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">LGA</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Store Name</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Store Address</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Transaction Count</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Total Amount</th>
+                                </tr>
+                            </thead>
+                            <tbody id="data-table" class="bg-white divide-y divide-slate-200">
+                                </tbody>
+                        </table>
+                         <p id="no-results" class="text-center py-8 text-slate-500 hidden">No users match the current filter.</p>
+                    </div>
+                    <div id="scroll-hint-arrow"></div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div id="scroll-indicator-overlay" class="hidden">
-        <div id="scroll-indicator-arrow"></div>
     </div>
 
     <script src="script.js"></script>
