--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     <div id="churn-inputs" class="hidden">
                         <div>
-                             <h4 class="text-sm font-medium text-slate-700 mb-2">This compares with activity in the 30 days prior</h4>
+                             <h4 class="text-sm font-medium text-slate-700 mb-2">Select time period to compare with activity in the 30 days prior</h4>
                              <div class="flex items-center gap-2 mb-3" id="api-presets-churn"></div>
                              <div class="flex items-center gap-2">
                                 <input type="date" id="api-start-churn" class="w-full border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-sm p-2">
