--- a/index.html
+++ b/index.html
@@ -117,7 +117,15 @@
 
         <div id="dashboard" class="hidden">
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 sm:gap-6 mb-8">
-                <div class="metric-card bg-white p-5 rounded-xl shadow-sm"><h3 class="text-sm font-medium text-slate-500">Retention Rate</h3><p id="retention-rate" class="metric-value text-3xl font-bold mt-1"></p></div>
+                <div id="retention-rate-card" class="metric-card bg-white p-5 rounded-xl shadow-sm">
+                    <div class="flex justify-between items-center">
+                        <h3 class="text-sm font-medium text-slate-500">Retention Rate</h3>
+                        <svg id="report-info-icon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-400 hover:text-blue-600 cursor-pointer transition-colors duration-200 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                    </div>
+                    <p id="retention-rate" class="metric-value text-3xl font-bold mt-1"></p>
+                </div>
                 <div class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">Retained Users</h3><p id="retained-users" class="metric-value text-3xl font-bold mt-1"></p><p id="retained-when" class="text-xs text-slate-400 mt-1"></p><div id="retained-popup" class="card-popup"></div></div>
                 <div class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">New Users</h3><p id="new-users" class="metric-value text-3xl font-bold mt-1"></p><p id="new-when" class="text-xs text-slate-400 mt-1"></p><div id="new-popup" class="card-popup"></div></div>
                 <div id="churned-users-card" class="metric-card bg-white p-5 rounded-xl shadow-sm has-popup"><h3 class="text-sm font-medium text-slate-500">Churned Users</h3><p id="churned-users" class="metric-value text-3xl font-bold mt-1"></p><p id="churned-when" class="text-xs text-slate-400 mt-1"></p><div id="churned-popup" class="card-popup"></div></div>
@@ -182,6 +190,18 @@
             </div>
         </div>
     </div>
+
+    <!-- Report Summary Modal -->
+    <div id="report-modal-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden"></div>
+    <div id="report-modal" class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white rounded-lg shadow-xl z-50 w-full max-w-lg p-6 hidden">
+        <h2 class="text-lg font-bold mb-4 text-slate-800">Report Summary</h2>
+        <div id="report-content" class="bg-slate-50 border border-slate-200 p-4 rounded-md mb-6 text-sm whitespace-pre-wrap font-mono text-slate-700 overflow-x-auto"></div>
+        <div class="flex justify-end gap-4">
+             <button id="copy-report-btn" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition">Copy Report</button>
+             <button id="close-report-btn" class="bg-slate-200 text-slate-800 font-semibold py-2 px-4 rounded-md hover:bg-slate-300 transition">Close</button>
+        </div>
+    </div>
+
 
     <script src="script.js"></script>
 </body>
