--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 </head>
 <body class="text-slate-800">
 
+    <div id="loading-overlay" class="fixed inset-0 bg-slate-900 bg-opacity-30 z-50 hidden items-center justify-center">
+        <div class="loader-card">
+            <div class="loader"></div>
+            <p class="text-slate-600 font-medium">Fetching & Analyzing Data...</p>
+        </div>
+    </div>
+
+
     <div id="app" class="p-4 sm:p-6 lg:p-8 max-w-7xl mx-auto">
 
         <header class="mb-8 text-center">
@@ -90,7 +98,7 @@
 
                     <div id="churn-inputs" class="hidden">
                         <div>
-                             <h4 class="text-sm font-medium text-slate-700 mb-2">Select time period to compare with activity in the 30 days prior</h4>
+                             <h4 class="text-sm font-medium text-slate-700 mb-2">Any selected time period is compared with activity in the 30 days prior</h4>
                              <div class="flex items-center gap-2 mb-3" id="api-presets-churn"></div>
                              <div class="flex items-center gap-2">
                                 <input type="date" id="api-start-churn" class="w-full border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-sm p-2">
@@ -191,7 +199,6 @@
         </div>
     </div>
 
-    <!-- Report Summary Modal -->
     <div id="report-modal-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden"></div>
     <div id="report-modal" class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-white rounded-lg shadow-xl z-50 w-full max-w-lg p-6 hidden">
         <h2 class="text-lg font-bold mb-4 text-slate-800">Report Summary</h2>
