Dashboard reactivation columnn contd4

--- a/monitor.html
+++ b/monitor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Churn Reactivation Live Monitor</title>
+    <title>Pika Churn Reactivation Live Monitor</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <style>
@@ -80,7 +80,7 @@
     <header>
         <div class="header-content">
             <div>
-                <h1 style="margin: 0;">Churn Reactivation Monitor</h1>
+                <h1 style="margin: 0;">Pika Churn Reactivation Monitor</h1>
                 <p class="header-info" style="margin: 0.25rem 0 0 0;">Created on: <strong id="creation-date">...</strong> | Due Date: <strong id="due-date">...</strong></p>
             </div>
             <div class="controls">
