Fixing the monitor to update well3

--- a/monitor.html
+++ b/monitor.html
@@ -17,7 +17,7 @@
 
         <div class="monitor-header">
             <div>
-                <h1 class="text-2xl lg:text-3xl font-bold text-gray-800">Churn Reactivation Monitor</h1>
+                <h1 class="text-2xl lg:text-3xl font-bold text-gray-800">Pika Reactivation Monitor</h1>
                 <p id="monitor-info" class="text-sm text-gray-600 mt-1">
                     Monitor created on: ... | Due Date: ...
                 </p>
