--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Retention & Analysis Dashboard</title>
+    <title>Pika Retention & Analysis Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
@@ -24,7 +24,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                 </svg>
             </div>
-            <h2 class="text-2xl font-bold text-center text-slate-800">Access Dashboard</h2>
+            <h2 class="text-2xl font-bold text-center text-slate-800">Access Pika-RS Dashboard</h2>
             <p class="text-sm text-slate-500 text-center">Please enter the password to continue.</p>
             <form id="login-form" class="mt-6 space-y-4">
                 <div>
@@ -51,7 +51,7 @@
     <div id="app" class="p-4 sm:p-6 lg:p-8 max-w-7xl mx-auto hidden">
 
         <header class="mb-8 text-center">
-            <h1 class="text-4xl font-bold text-slate-900 main-title">Customer Retention & Analysis Dashboard</h1>
+            <h1 class="text-4xl font-bold text-slate-900 main-title">Retention & Analysis Dashboard</h1>
             <p class="text-slate-500 mt-2 max-w-2xl mx-auto">Use the API fetch for cohort and churn analysis or upload files for comparison.</p>
         </header>
 
