--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                 </svg>
             </div>
-            <h2 class="text-2xl font-bold text-center text-slate-800">Access Pika-RS Dashboard</h2>
+            <h2 class="text-2xl font-bold text-center text-slate-800">Access Pika-RS Dashboard.......</h2>
             <p class="text-sm text-slate-500 text-center">Please enter the password to continue.</p>
             <form id="login-form" class="mt-6 space-y-4">
                 <div>
