--- a/monitor.html
+++ b/monitor.html
@@ -13,6 +13,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-100 font-sans">
+
+    <div id="admin-login-overlay" class="fixed inset-0 z-50 flex items-center justify-center bg-gray-900 bg-opacity-50 hidden">
+        <div class="login-card">
+            <div class="login-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
+                </svg>
+            </div>
+            <h2 class="text-xl font-bold text-center text-slate-800">Admin Access</h2>
+            <p class="text-sm text-slate-500 text-center">Enter password to view full monitor.</p>
+            <form id="admin-login-form" class="mt-4 space-y-4">
+                <div>
+                    <input type="password" id="admin-password-input" placeholder="Password" class="login-input">
+                </div>
+                <div class="flex gap-2">
+                    <button type="button" id="cancel-login-btn" class="w-full bg-gray-200 text-gray-800 font-semibold py-2 px-4 rounded-md hover:bg-gray-300 transition">Cancel</button>
+                    <button type="submit" class="w-full bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition">Unlock</button>
+                </div>
+            </form>
+            <p id="admin-login-error" class="text-red-600 text-sm text-center font-medium min-h-[1.25rem]"></p>
+        </div>
+    </div>
+
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
 
         <div class="monitor-header">
@@ -22,22 +45,35 @@
                     Monitor created on: ... | Due Date: ...
                 </p>
                 <p id="churn-period-info" class="text-sm font-medium text-gray-500 mt-1">
-                    </p>
+                </p>
             </div>
-            <button id="refresh-btn" class="refresh-button">
-                <svg id="refresh-icon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h5M20 20v-5h-5M20 4h-5l-1-1h-4l-1 1H5M4 20h5l1 1h4l1-1h5" />
-                </svg>
-                <svg id="loading-spinner" class="animate-spin h-5 w-5 mr-2 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                </svg>
-                <span id="refresh-btn-text">Refresh Status</span>
-            </button>
+            <div class="flex flex-wrap gap-2">
+                <button id="view-as-admin-btn" class="bg-purple-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-purple-700 transition shadow-sm hidden">
+                    View as Admin
+                </button>
+
+                <button id="copy-agent-link-btn" class="bg-green-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-green-700 transition shadow-sm flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                    </svg>
+                    Copy Agent Link
+                </button>
+
+                <button id="refresh-btn" class="refresh-button">
+                    <svg id="refresh-icon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h5M20 20v-5h-5M20 4h-5l-1-1h-4l-1 1H5M4 20h5l1 1h4l1-1h5" />
+                    </svg>
+                    <svg id="loading-spinner" class="animate-spin h-5 w-5 mr-2 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                    </svg>
+                    <span id="refresh-btn-text">Refresh Status</span>
+                </button>
+            </div>
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
-            <div class="stat-card">
+            <div id="reactivated-card" class="stat-card">
                 <div class="flex items-center">
                     <div class="stat-icon bg-green-100 text-green-600">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
@@ -49,7 +85,7 @@
                     <div id="reactivated-progress" class="progress-bar"></div>
                 </div>
             </div>
-            <div class="stat-card">
+            <div id="time-remaining-card" class="stat-card">
                 <div class="flex items-center">
                     <div class="stat-icon bg-blue-100 text-blue-600">
                          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
