--- a/monitor.html
+++ b/monitor.html
@@ -41,39 +41,39 @@
         <div class="monitor-header">
             <div>
                 <h1 class="text-2xl lg:text-3xl font-bold text-gray-800">Pika Reactivation Monitor</h1>
-                <p id="monitor-info" class="text-sm text-gray-600 mt-1">
+                <p id="monitor-info" class="text-xs sm:text-sm text-gray-600 mt-1">
                     Monitor created on: ... | Due Date: ...
                 </p>
-                <p id="churn-period-info" class="text-sm font-medium text-gray-500 mt-1">
+                <p id="churn-period-info" class="text-xs sm:text-sm font-medium text-gray-500 mt-1">
                 </p>
             </div>
-            <div class="flex flex-wrap gap-2">
-                <button id="view-as-admin-btn" class="bg-purple-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-purple-700 transition shadow-sm hidden">
+            <div class="flex flex-wrap items-center gap-2 mt-2 sm:mt-0">
+                <button id="view-as-admin-btn" class="bg-purple-600 text-white font-semibold py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 rounded-md hover:bg-purple-700 transition shadow-sm hidden">
                     View as Admin
                 </button>
 
-                <button id="copy-agent-link-btn" class="bg-green-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-green-700 transition shadow-sm flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <button id="copy-agent-link-btn" class="bg-green-600 text-white font-semibold py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 rounded-md hover:bg-green-700 transition shadow-sm flex items-center hidden">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1.5 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
                     </svg>
-                    Copy Agent Link
+                    Copy Link
                 </button>
 
-                <button id="refresh-btn" class="refresh-button">
-                    <svg id="refresh-icon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <button id="refresh-btn" class="refresh-button py-1.5 px-3 text-xs sm:text-sm sm:py-2 sm:px-4 flex items-center">
+                    <svg id="refresh-icon" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1.5 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h5M20 20v-5h-5M20 4h-5l-1-1h-4l-1 1H5M4 20h5l1 1h4l1-1h5" />
                     </svg>
-                    <svg id="loading-spinner" class="animate-spin h-5 w-5 mr-2 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                    <svg id="loading-spinner" class="animate-spin h-4 w-4 sm:h-5 sm:w-5 mr-1.5 sm:mr-2 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                         <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                         <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
                     </svg>
-                    <span id="refresh-btn-text">Refresh Status</span>
+                    <span id="refresh-btn-text">Refresh</span>
                 </button>
             </div>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
-            <div id="reactivated-card" class="stat-card">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 sm:gap-6 mb-6">
+            <div id="reactivated-card" class="stat-card hidden">
                 <div class="flex items-center">
                     <div class="stat-icon bg-green-100 text-green-600">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
@@ -85,7 +85,7 @@
                     <div id="reactivated-progress" class="progress-bar"></div>
                 </div>
             </div>
-            <div id="time-remaining-card" class="stat-card">
+            <div id="time-remaining-card" class="stat-card hidden">
                 <div class="flex items-center">
                     <div class="stat-icon bg-blue-100 text-blue-600">
                          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
@@ -104,11 +104,15 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                     </svg>
                 </div>
-                <input type="text" id="search-monitor-input" class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-blue-500 focus:border-blue-500 sm:text-sm" placeholder="Search by name, phone, AE, etc...">
+                <input type="text" id="search-monitor-input" class="block w-full pl-10 pr-3 py-3 border border-gray-300 rounded-lg leading-5 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-blue-500 focus:border-blue-500 text-base" placeholder="Search by name, phone, AE, etc...">
             </div>
         </div>
 
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <div id="monitor-mobile-list" class="md:hidden space-y-3">
+            <div class="text-center text-gray-500 py-8">Loading...</div>
+        </div>
+
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden hidden md:block">
             <div class="overflow-x-auto">
                 <table class="w-full text-left">
                     <thead class="bg-gray-50 border-b border-gray-200">
@@ -130,9 +134,11 @@
                         </tr>
                     </tbody>
                 </table>
-                 <p id="no-results" class="text-center text-gray-500 py-8 hidden">No users match your search.</p>
             </div>
         </div>
+        
+        <p id="no-results" class="text-center text-gray-500 py-8 hidden">No users match your search.</p>
+
     </div>
     <script src="monitor.js"></script>
 </body>
