added filter buttons on the monitor

--- a/monitor.html
+++ b/monitor.html
@@ -112,6 +112,14 @@
                 </div>
                 <input type="text" id="search-monitor-input" class="block w-full pl-10 pr-3 py-3 border border-gray-300 rounded-lg leading-5 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-blue-500 focus:border-blue-500 text-base" placeholder="Search by name, phone, AE, etc...">
             </div>
+            
+            <div class="flex justify-center mt-3">
+                <div class="flex gap-2 w-[95%] sm:w-[70%]">
+                    <button id="filter-btn-all" class="flex-1 px-4 py-1.5 sm:py-2 text-xs sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-md bg-blue-600 text-white border border-transparent tracking-wide hover:bg-blue-700">All</button>
+                    <button id="filter-btn-ae" class="flex-1 px-4 py-1.5 sm:py-2 text-xs sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-sm bg-white text-gray-600 border border-gray-200 hover:bg-gray-50 tracking-wide">AE/Agent</button>
+                    <button id="filter-btn-merchant" class="flex-1 px-4 py-1.5 sm:py-2 text-xs sm:text-sm font-medium rounded-full transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-blue-500 shadow-sm bg-white text-gray-600 border border-gray-200 hover:bg-gray-50 tracking-wide">Merchant</button>
+                </div>
+            </div>
         </div>
 
         <div id="monitor-mobile-list" class="md:hidden space-y-3">
