--- a/monitor.html
+++ b/monitor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pika Churn Reactivation Monitor</title>
+    <title>Pika Monitor</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
@@ -40,7 +40,7 @@
 
         <div class="monitor-header">
             <div>
-                <h1 class="text-2xl lg:text-3xl font-bold text-gray-800">Pika Reactivation Monitor</h1>
+                <h1 class="text-2xl lg:text-3xl font-bold text-gray-800">Pika Monitor</h1>
                 <p id="monitor-info" class="text-xs sm:text-sm text-gray-600 mt-1">
                     Monitor created on: ... | Due Date: ...
                 </p>
