--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
                                 <input type="number" id="max-trans" placeholder="Max" class="w-full border-slate-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-sm p-2">
                             </div>
                         </div>
+                        <div class="pb-2">
+                            <label class="inline-flex items-center cursor-pointer select-none">
+                                <input type="checkbox" id="sku-toggle" class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500">
+                                <span class="ml-2 text-sm font-medium text-slate-700">Show SKU Count</span>
+                            </label>
+                        </div>
                         <button id="export-csv" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition h-fit">Export CSV</button>
                     </div>
                 </div>
@@ -220,6 +226,7 @@
                                     <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Store Name</th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Store Address</th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Transaction Count</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider sku-column hidden">SKU Count</th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Total Amount</th>
                                 </tr>
                             </thead>
