--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body class="text-slate-800 bg-slate-50 dark:bg-slate-950 dark:text-slate-200 transition-colors duration-300">
 
-    <div id="animated-bg" class="fixed inset-0 z-0 pointer-events-none overflow-hidden opacity-40 dark:opacity-20">
+    <div id="animated-bg" class="fixed inset-0 z-0 pointer-events-none overflow-hidden">
         <div class="bg-shape shape-1"></div>
         <div class="bg-shape shape-2"></div>
         <div class="bg-shape shape-3"></div>
