Made UI changes to the User Data Table 1.0

--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
 <body class="text-slate-800 bg-slate-50 dark:bg-slate-950 dark:text-slate-200 transition-colors duration-300">
 
     <div id="animated-bg" class="fixed inset-0 z-0 pointer-events-none overflow-hidden">
-        <div class="bg-shape shape-1"></div>
-        <div class="bg-shape shape-2"></div>
-        <div class="bg-shape shape-3"></div>
-        <div class="bg-shape shape-4"></div>
+        <div class="bg-line-shape line-1"></div>
+        <div class="bg-line-shape line-2"></div>
+        <div class="bg-line-shape line-3"></div>
+
+        <div class="shooting-star-container">
+            <span class="shooting-star star-1"></span>
+            <span class="shooting-star star-2"></span>
+            <span class="shooting-star star-3"></span>
+            <span class="shooting-star star-4"></span>
+            <span class="shooting-star star-5"></span>
+            <span class="shooting-star star-6"></span>
+            <span class="shooting-star star-7"></span>
+        </div>
     </div>
 
     <div id="login-overlay" class="fixed inset-0 z-50 flex items-center justify-center">
